[package]
name = "rocket-practice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
serde = "1.0.127"
serde_derive = "1.0.127"
serde_json = "1.0.66"
rocket = "0.4.10"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["redis_pool", "json"]
